syntax = "proto3";

option go_package="./pba;pba";

service Greeter {
    rpc SayHello (ReqHello) returns (RepHello) {}
}

message ReqHello {
    string name =1;
}

message RepHello {
    string msg = 1;
}